[tool.poetry]
name = "testproject2"
version = "0.1.0"
description = ""
authors = ["harry-kaye <harold.kruger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.31.0"
pandas = "2.2.2"
matplotlib = "3.9.0"
streamlit = "^1.35.0"
folium = "0.16.0"
streamlit_folium = "0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
